--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "lodash": "^4.16.6",
     "material-design-icons": "^3.0.1",
     "ng2-bootstrap": "^1.1.10",
-    "ng2-encrm-components": "git+http://git.pf.com.pl:8081/angular2-shared/ecrm-components.git",
     "ng2-logger": "^0.1.21",
     "ng2-rest": "^5.0.8",
     "ng2-translate": "^3.1.0",
@@ -95,6 +94,7 @@
     "protractor-jasmine2-html-reporter": "^0.0.6",
     "rxjs": "5.0.0-beta.12",
     "static-columns": "0.0.10",
+    "typescript": "2.0.10",
     "zone.js": "~0.6.21"
   },
   "devDependencies": {
@@ -157,7 +157,6 @@
     "tslint": "3.15.1",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.5.0",
-    "typescript": "^2.0.10",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.22",
     "webpack-dev-middleware": "^1.6.1",
