--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "gh-pages": "^0.11.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.21.0",
+    "http-server": "^0.9.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
