--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,37 @@
-{
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "noEmitHelpers": true,
-    "strictNullChecks": false,
-    "baseUrl": "./src",
-    "paths": [],
 
-    "lib": [
-      "dom",
-      "es7"
-    ],
-    "types": [
-      "hammerjs",
-      "jasmine",
-      "node",
-      "protractor",
-      "selenium-webdriver",
-      "source-map",
-      "uglify-js",
-      "webpack",
-      "chai",
-      "chai-as-promised",
-      "lodash"
+  {
+    "compilerOptions": {
+      "declaration": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
+      "allowSyntheticDefaultImports": true,
+      "importHelpers": true,
+      "moduleResolution": "node",
+      "module": "commonjs",
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "target": "es5",
+      "typeRoots": [
+        "node_modules/@types"
+      ],
+      "lib": [
+        "es2015",
+        "es2015.promise",
+        "es2015.generator",
+        "es2015.collection",
+        "es2015.core",
+        "es2015.reflect",
+        "es2016",
+        "dom"
+      ],
+      "types": [
+        "node"
+      ],
+      "outDir": "dist"
+    },
+    "include": [
+      "src/"
     ]
-  },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "awesomeTypescriptLoaderOptions": {
-    "forkChecker": true,
-    "useWebpackText": true
-  },
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
-}
+  }
+
+  
