build hash update 5.0.6

--- a/package.json
+++ b/package.json
@@ -380,5 +380,6 @@
   "bugs": {
     "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
   },
-  "private": false
+  "private": false,
+  "lastBuildTagHash": "9ab341b36c0a8eff2f7c580352c6105e7db838cb"
 }
